--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#F5F5F5</color>
     <color name="colorPrimaryDark">#BDBDBD</color>
     <color name="colorAccent">#4C3DC4</color>
+
+    <color name="colorPositive">#45D46A</color>
+    <color name="colorNegative">#FF5D63</color>
 </resources>
