--- a/app/src/main/res/layout/item_monitor.xml
+++ b/app/src/main/res/layout/item_monitor.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:orientation="vertical"
-    android:paddingBottom="4dp"
+    android:paddingBottom="12dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="4dp">
@@ -129,7 +130,7 @@
         android:id="@+id/successNotifications"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="-4dp"
         android:paddingLeft="12dp"
         android:paddingStart="12dp"
